# TSQL

./: .gitignore  LICENSE  README.md  pyproject.toml  setup.py
tests/: test_tsql.py
tsql/: __init__.py  tsql.py
tsqlite.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
