[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tsql"
version = "0.1.0"
description = "A Python library for managing and syncing SQLite databases over Telegram channels with secure encryption."
readme = "README.md"
license = { file = "LICENSE" }
authors = [
    { name = "Sina Saeedi", email = "sina8013@gmail.com" }
]
keywords = ["telegram", "sqlite", "database", "encryption","sql"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Libraries",
    "Topic :: Database :: Database Engines/Servers",
    "Topic :: Communications :: Chat",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.6",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent"
]

[project.urls]
Homepage = "https://github.com/sina8013/TSQLl"
Documentation = "https://github.com/sina8013/TSQL#readme"
Source = "https://github.com/sina8013/TSQL"
Tracker = "https://github.com/sina8013/TSQL/issues"

[tool.setuptools]
package-dir = {"" = "tsql"} 
packages = ["tsql"]
include-package-data = true

[tool.setuptools.dynamic]
version = {attr = "tsql.__version__"}
